docs/api/qiskit/0.28/qiskit.algorithms.optimizers.Optimizer.mdx
---
title: Optimizer
description: API reference for qiskit.algorithms.optimizers.Optimizer
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.optimizers.Optimizer
---

# qiskit.algorithms.optimizers.Optimizer

<Class id="qiskit.algorithms.optimizers.Optimizer" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.18/qiskit/algorithms/optimizers/optimizer.py" signature="Optimizer">
  Base class for optimization algorithm.

  Initialize the optimization algorithm, setting the support level for \_gradient\_support\_level, \_bound\_support\_level, \_initial\_point\_support\_level, and empty options.

  ### \_\_init\_\_

  <Function id="qiskit.algorithms.optimizers.Optimizer.__init__" name="__init__" signature="abstract __init__()">
    Initialize the optimization algorithm, setting the support level for \_gradient\_support\_level, \_bound\_support\_level, \_initial\_point\_support\_level, and empty options.
  </Function>

  ## Methods

  |                                                                                                                                                                          |                                                                                                                                                                                |
  | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
  | [`__init__`](#qiskit.algorithms.optimizers.Optimizer.__init__ "qiskit.algorithms.optimizers.Optimizer.__init__")()                                                       | Initialize the optimization algorithm, setting the support level for \_gradient\_support\_level, \_bound\_support\_level, \_initial\_point\_support\_level, and empty options. |
  | [`get_support_level`](#qiskit.algorithms.optimizers.Optimizer.get_support_level "qiskit.algorithms.optimizers.Optimizer.get_support_level")()                            | Return support level dictionary                                                                                                                                                |
  | [`gradient_num_diff`](#qiskit.algorithms.optimizers.Optimizer.gradient_num_diff "qiskit.algorithms.optimizers.Optimizer.gradient_num_diff")(x\_center, f, epsilon\[, …]) | We compute the gradient with the numeric differentiation in the parallel way, around the point x\_center.                                                                      |
  | [`optimize`](#qiskit.algorithms.optimizers.Optimizer.optimize "qiskit.algorithms.optimizers.Optimizer.optimize")(num\_vars, objective\_function\[, …])                   | Perform optimization.                                                                                                                                                          |
  | [`print_options`](#qiskit.algorithms.optimizers.Optimizer.print_options "qiskit.algorithms.optimizers.Optimizer.print_options")()                                        | Print algorithm-specific options.                                                                                                                                              |
  | [`set_max_evals_grouped`](#qiskit.algorithms.optimizers.Optimizer.set_max_evals_grouped "qiskit.algorithms.optimizers.Optimizer.set_max_evals_grouped")(limit)           | Set max evals grouped                                                                                                                                                          |
  | [`set_options`](#qiskit.algorithms.optimizers.Optimizer.set_options "qiskit.algorithms.optimizers.Optimizer.set_options")(\*\*kwargs)                                    | Sets or updates values in the options dictionary.                                                                                                                              |
  | [`wrap_function`](#qiskit.algorithms.optimizers.Optimizer.wrap_function "qiskit.algorithms.optimizers.Optimizer.wrap_function")(function, args)                          | Wrap the function to implicitly inject the args at the call of the function.                                                                                                   |

  ## Attributes

  |                                                                                                                                                                           |                                                |
  | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------- |
  | [`bounds_support_level`](#qiskit.algorithms.optimizers.Optimizer.bounds_support_level "qiskit.algorithms.optimizers.Optimizer.bounds_support_level")                      | Returns bounds support level                   |
  | [`gradient_support_level`](#qiskit.algorithms.optimizers.Optimizer.gradient_support_level "qiskit.algorithms.optimizers.Optimizer.gradient_support_level")                | Returns gradient support level                 |
  | [`initial_point_support_level`](#qiskit.algorithms.optimizers.Optimizer.initial_point_support_level "qiskit.algorithms.optimizers.Optimizer.initial_point_support_level") | Returns initial point support level            |
  | [`is_bounds_ignored`](#qiskit.algorithms.optimizers.Optimizer.is_bounds_ignored "qiskit.algorithms.optimizers.Optimizer.is_bounds_ignored")                               | Returns is bounds ignored                      |
  | [`is_bounds_required`](#qiskit.algorithms.optimizers.Optimizer.is_bounds_required "qiskit.algorithms.optimizers.Optimizer.is_bounds_required")                            | Returns is bounds required                     |
  | [`is_bounds_supported`](#qiskit.algorithms.optimizers.Optimizer.is_bounds_supported "qiskit.algorithms.optimizers.Optimizer.is_bounds_supported")                         | Returns is bounds supported                    |
  | [`is_gradient_ignored`](#qiskit.algorithms.optimizers.Optimizer.is_gradient_ignored "qiskit.algorithms.optimizers.Optimizer.is_gradient_ignored")                         | Returns is gradient ignored                    |
  | [`is_gradient_required`](#qiskit.algorithms.optimizers.Optimizer.is_gradient_required "qiskit.algorithms.optimizers.Optimizer.is_gradient_required")                      | Returns is gradient required                   |
  | [`is_gradient_supported`](#qiskit.algorithms.optimizers.Optimizer.is_gradient_supported "qiskit.algorithms.optimizers.Optimizer.is_gradient_supported")                   | Returns is gradient supported                  |
  | [`is_initial_point_ignored`](#qiskit.algorithms.optimizers.Optimizer.is_initial_point_ignored "qiskit.algorithms.optimizers.Optimizer.is_initial_point_ignored")          | Returns is initial point ignored               |
  | [`is_initial_point_required`](#qiskit.algorithms.optimizers.Optimizer.is_initial_point_required "qiskit.algorithms.optimizers.Optimizer.is_initial_point_required")       | Returns is initial point required              |
  | [`is_initial_point_supported`](#qiskit.algorithms.optimizers.Optimizer.is_initial_point_supported "qiskit.algorithms.optimizers.Optimizer.is_initial_point_supported")    | Returns is initial point supported             |
  | [`setting`](#qiskit.algorithms.optimizers.Optimizer.setting "qiskit.algorithms.optimizers.Optimizer.setting")                                                             | Return setting                                 |
  | [`settings`](#qiskit.algorithms.optimizers.Optimizer.settings "qiskit.algorithms.optimizers.Optimizer.settings")                                                          | The optimizer settings in a dictionary format. |

  ### bounds\_support\_level

  <Function id="qiskit.algorithms.optimizers.Optimizer.bounds_support_level" name="bounds_support_level" signature="property bounds_support_level">
    Returns bounds support level
  </Function>

  ### get\_support\_level

  <Function id="qiskit.algorithms.optimizers.Optimizer.get_support_level" name="get_support_level" signature="abstract get_support_level()">
    Return support level dictionary
  </Function>

  ### gradient\_num\_diff

  <Function id="qiskit.algorithms.optimizers.Optimizer.gradient_num_diff" name="gradient_num_diff" signature="static gradient_num_diff(x_center, f, epsilon, max_evals_grouped=1)">
    We compute the gradient with the numeric differentiation in the parallel way, around the point x\_center.

    **Parameters**

    *   **x\_center** (*ndarray*) – point around which we compute the gradient
    *   **f** (*func*) – the function of which the gradient is to be computed.
    *   **epsilon** (*float*) – the epsilon used in the numeric differentiation.
    *   **max\_evals\_grouped** (*int*) – max evals grouped

    **Returns**

    the gradient computed

    **Return type**

    grad
  </Function>

  ### gradient\_support\_level

  <Function id="qiskit.algorithms.optimizers.Optimizer.gradient_support_level" name="gradient_support_level" signature="property gradient_support_level">
    Returns gradient support level
  </Function>

  ### initial\_point\_support\_level

  <Function id="qiskit.algorithms.optimizers.Optimizer.initial_point_support_level" name="initial_point_support_level" signature="property initial_point_support_level">
    Returns initial point support level
  </Function>

  ### is\_bounds\_ignored

  <Function id="qiskit.algorithms.optimizers.Optimizer.is_bounds_ignored" name="is_bounds_ignored" signature="property is_bounds_ignored">
    Returns is bounds ignored
  </Function>

  ### is\_bounds\_required

  <Function id="qiskit.algorithms.optimizers.Optimizer.is_bounds_required" name="is_bounds_required" signature="property is_bounds_required">
    Returns is bounds required
  </Function>

  ### is\_bounds\_supported

  <Function id="qiskit.algorithms.optimizers.Optimizer.is_bounds_supported" name="is_bounds_supported" signature="property is_bounds_supported">
    Returns is bounds supported
  </Function>

  ### is\_gradient\_ignored

  <Function id="qiskit.algorithms.optimizers.Optimizer.is_gradient_ignored" name="is_gradient_ignored" signature="property is_gradient_ignored">
    Returns is gradient ignored
  </Function>

  ### is\_gradient\_required

  <Function id="qiskit.algorithms.optimizers.Optimizer.is_gradient_required" name="is_gradient_required" signature="property is_gradient_required">
    Returns is gradient required
  </Function>

  ### is\_gradient\_supported

  <Function id="qiskit.algorithms.optimizers.Optimizer.is_gradient_supported" name="is_gradient_supported" signature="property is_gradient_supported">
    Returns is gradient supported
  </Function>

  ### is\_initial\_point\_ignored

  <Function id="qiskit.algorithms.optimizers.Optimizer.is_initial_point_ignored" name="is_initial_point_ignored" signature="property is_initial_point_ignored">
    Returns is initial point ignored
  </Function>

  ### is\_initial\_point\_required

  <Function id="qiskit.algorithms.optimizers.Optimizer.is_initial_point_required" name="is_initial_point_required" signature="property is_initial_point_required">
    Returns is initial point required
  </Function>

  ### is\_initial\_point\_supported

  <Function id="qiskit.algorithms.optimizers.Optimizer.is_initial_point_supported" name="is_initial_point_supported" signature="property is_initial_point_supported">
    Returns is initial point supported
  </Function>

  ### optimize

  <Function id="qiskit.algorithms.optimizers.Optimizer.optimize" name="optimize" signature="abstract optimize(num_vars, objective_function, gradient_function=None, variable_bounds=None, initial_point=None)">
    Perform optimization.

    **Parameters**

    *   **num\_vars** (*int*) – Number of parameters to be optimized.
    *   **objective\_function** (*callable*) – A function that computes the objective function.
    *   **gradient\_function** (*callable*) – A function that computes the gradient of the objective function, or None if not available.
    *   **variable\_bounds** (*list\[(float, float)]*) – List of variable bounds, given as pairs (lower, upper). None means unbounded.
    *   **initial\_point** (*numpy.ndarray\[float]*) – Initial point.

    **Returns**

    **point, value, nfev**

    point: is a 1D numpy.ndarray\[float] containing the solution value: is a float with the objective function value nfev: number of objective function calls made if available or None

    **Raises**

    **ValueError** – invalid input
  </Function>

  ### print\_options

  <Function id="qiskit.algorithms.optimizers.Optimizer.print_options" name="print_options" signature="print_options()">
    Print algorithm-specific options.
  </Function>

  ### set\_max\_evals\_grouped

  <Function id="qiskit.algorithms.optimizers.Optimizer.set_max_evals_grouped" name="set_max_evals_grouped" signature="set_max_evals_grouped(limit)">
    Set max evals grouped
  </Function>

  ### set\_options

  <Function id="qiskit.algorithms.optimizers.Optimizer.set_options" name="set_options" signature="set_options(**kwargs)">
    Sets or updates values in the options dictionary.

    The options dictionary may be used internally by a given optimizer to pass additional optional values for the underlying optimizer/optimization function used. The options dictionary may be initially populated with a set of key/values when the given optimizer is constructed.

    **Parameters**

    **kwargs** (*dict*) – options, given as name=value.
  </Function>

  ### setting

  <Function id="qiskit.algorithms.optimizers.Optimizer.setting" name="setting" signature="property setting">
    Return setting
  </Function>

  ### settings

  <Function id="qiskit.algorithms.optimizers.Optimizer.settings" name="settings" signature="property settings">
    The optimizer settings in a dictionary format.

    The settings can for instance be used for JSON-serialization (if all settings are serializable, which e.g. doesn’t hold per default for callables), such that the optimizer object can be reconstructed as

    ```python
    settings = optimizer.settings
    # JSON serialize and send to another server
    optimizer = OptimizerClass(**settings)
    ```

    **Return type**

    `Dict`\[`str`, `Any`]
  </Function>

  ### wrap\_function

  <Function id="qiskit.algorithms.optimizers.Optimizer.wrap_function" name="wrap_function" signature="static wrap_function(function, args)">
    Wrap the function to implicitly inject the args at the call of the function.

    **Parameters**

    *   **function** (*func*) – the target function
    *   **args** (*tuple*) – the args to be injected

    **Returns**

    wrapper

    **Return type**

    function\_wrapper
  </Function>
</Class>

